--- a/class/index.html
+++ b/class/index.html
@@ -526,12 +526,12 @@
                         <td class="ce va"> </td>
                     </tr>
                     <tr>
-                        <td class="ce va" rowspan="15">NCS<br>소양<br>교과</td>
+                        <td class="ce va" rowspan="15">NCS<br>전공<br>교과</td>
                         <td class="ce va" colspan="2">소계</td>
+                        <td class="ce va">950</td>
                         <td class="ce va"> </td>
                         <td class="ce va"> </td>
-                        <td class="ce va"> </td>
-                        <td class="ce va"> </td>
+                        <td class="ce va">950</td>
                         <td class="ce va"> </td>
                     </tr>
                     <tr>
