--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자바스크립트</title>
 
+    <!-- 파비콘 -->
+    <link rel="shortcut icon" href="../assets/ico/favicon2.png">
+    <link rel="apple-touch-icon-precomposed" href="../assets/ico/favicon2_114.png">
+    <link rel="icon" href="../assets/ico/icon2.png">
+    <link rel="icon" href="../assets/ico/favicon2_57.png" sizes="16x16">
+    <link rel="icon" href="../assets/ico/favicon2_72.png" sizes="32x32">
+    <link rel="icon" href="../assets/ico/favicon2_114.png" sizes="48x48">
+    <link rel="icon" href="../assets/ico/favicon2_114.png" sizes="64x64">
+    <link rel="icon" href="../assets/ico/favicon2_114.png" sizes="128x128">
+
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
