--- a/html/basic.html
+++ b/html/basic.html
@@ -136,19 +136,23 @@
 </head>
 <body>
     <header id="header">
-        <h1>HTML</h1>
+        <h1><a href="index.html">HTML</a></h1>
         <nav>
             <ul>
-                <li><a href="basic.html">HTML</a></li>
-                <li><a href="command.html">JAVASCRIPT</a></li>
+                <li><a href="#">기초</a></li>
+                <li><a href="#">주제</a></li>
+                <li><a href="#">알파벳</a></li>
             </ul>
         </nav>
     </header>
     <section id="contents">
         <nav class="menu">
             <ul>
-                <li><a href="command.html">기본 문서</a></li>
+                <li><a href="basic.html">기본 문서</a></li>
                 <li><a href="markup.html">기본 규칙</a></li>
+                <li><a href="#">W3C validator</a></li>
+                <li><a href="#">시멘틱 마크업</a></li>
+                <li><a href="#">블록/인라인 요소</a></li>
             </ul>
         </nav>
         <article class="article">
