--- a/html/index.html
+++ b/html/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
     <main id="main">
-        <h1>HTML <em>레퍼런스 북</em></h1>
+        <h1 a href="index.html">HTML <em>레퍼런스 북</em></h1>
         <nav>
             <ul>
                 <li><a href="basic.html">기초</a></li>
