--- a/html/markup.html
+++ b/html/markup.html
@@ -140,7 +140,7 @@
 </head>
 <body>
     <header id="header">
-        <h1>HTML</h1>
+        <h1><a href="index.html">HTML</a></h1>
         <nav>
             <ul>
                 <li><a href="#">기초</a></li>
