--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -9,75 +9,131 @@
     <style>
         /* 리셋 */
         *{
-            margin: 0px;
-            padding: 0px;
+            margin: 0;
+            padding: 0;
             font-family: 'GmarketSans';
+        }
 
-        }
-        li{
-            list-style: none;
-        }
-        a{
-            text-decoration: none;
-            color: #000;
-        }
-        /* 헤더 영역 */
+        /*헤더*/
         #header{
             padding: 2vw;
-            border-bottom: 1px dashed #cdcdcd;
+            border-bottom: 1px dashed #dedede;
         }
         #header h1{
-            font-size: 4vw;
             margin-bottom: 2vw;
+            font-size: 4vw;
         }
-        #header nav ul li {
-            display: inline-block;
+        #header nav{}
+        #header nav ul{}
+        #header nav ul li{
+            list-style: none; /* 점 없앰 */
+            display: inline; /* 가로 정렬 */
         }
-        #header nav ul li a {
+        #header nav ul li a{
+            text-decoration: none;
+            color: #000;
             border: 1px solid #000;
-            padding: 0.3vw 1vw 0.3vw 1vw;
-            transition: all 0.3s;
-            margin-bottom: 0.7vw;
+            padding: 0.9vw;
             display: inline-block;
         }
         #header nav ul li a:hover{
             background-color: #000;
             color: #fff;
+            transition: 0.3s;
         }
-        /* 컨텐츠 영역 */
-        #contents {
+
+        /*컨텐츠*/
+        #contents{
             padding: 2vw;
-            border-bottom: 1px dashed #cdcdcd;
         }
-        #contents h2{
+
+        #contents .menu {
+            border-bottom: 1px dashed #dedede; /*선 생성*/
+            padding-bottom: 2vw;
+        }
+        #contents .menu ul li {
+            list-style: none;
+            display: inline;
+        }
+        #contents .menu ul li a{
+            text-decoration: none;
+            border: 1px solid #000;
+            background-color: #000;
+            color: #fff;
+            padding: 1vw;
+            word-break: keep-all;
+            margin-top: 0.7vw;
+            margin-bottom: 0.7vw;
+            display: inline-block;
+        }
+        #contents .menu ul li a:hover{
+            text-decoration: none;
+            border: 1px solid #000;
+            background-color: #fff;
+            transition: 0.2s;
+            color: #000;
+            padding: 1vw;
+            word-break: keep-all;
+            margin-top: 0.7vw;
+            margin-bottom: 0.7vw;
+            display: inline-block;
+        }
+        .article {
+            padding: 2vw 0;
+            line-height: 1.6;
+        }
+        .article h2 {
+            font-weight: normal;
             margin-bottom: 10px;
         }
-        #contents .numList {}
-        #contents .numList {
-            margin-left: 30px;
+        .article h3 {
+            font-weight: normal;
+            margin-bottom: 10px;
         }
-        #contents .numList li {
-            line-height: 1.6;
-            list-style: decimal-leading-zero;
+        .article p{
+            margin-bottom: 10px;
         }
-        #plist {
-            padding: 4vw 2vw;
-            border-bottom: 1px dashed #cdcdcd;
-            display: inline; /* 가로 정렬 */
+        .article .table{
+            width: 100%;
+            border-spacing: 0;
+            border-collapse: collapse; /*겹친 선 없앰 */
+            margin-bottom: 10px;
+        }
+        .article .table tr th{
+            border: 1px solid #dedede;
+            padding: 10px;
+            font-weight: normal;
+            background-color: #f5f5f5;
+        }
+        .article .table tr td{
+            border: 1px solid #dedede;
+            padding: 10px;
+        }
+        .article .table .center{
+            text-align: center;
         }
         .article .box{
             background-color: #f5f5f5;
             padding: 10px;
         }
-
-        /* 모바일용 미디어 쿼리 */
+        .article .box2{
+            background-color: #ffffff;
+            padding: 10px;
+        }
+        /* 미디어 쿼리 */
         @media (max-width: 800px){
+            #header{
+                padding: 16px;
+            }
             #header h1{
                 font-size: 40px;
             }
             #header nav ul li a{
                 padding: 5px 10px;
                 font-size: 18px;
+            }
+            #contents{
+                padding: 16px;
             }
         }/*추가*/
     </style>
@@ -94,88 +150,38 @@
             </ul>
         </nav>
     </header>
-    <section id="plist">
-        <ul >
-            <li><a href="basic.html">기본 규칙</a></li>
-            <li><a href="command.html">기본 명령어</a></li>
-        </ul>
-    </section>
+
     <!-- 숙제하는법 : 정리할것 -->
     <section id="contents">
-        <h2>자바스크립트 기본 규칙</h2>
-        <ol class="numList">
-            <li>
-                하나의 실행문이 끝나면 마지막에 세미콜론(;)을 붙여 줍니다.<br>
-                세미콜론(;)을 붙여 주지 않아도 상관은 없으나,<br>
-                자바스크립트를 처음 학습시 하나의 실행문을 확인하고<br>
-                넘어가는 차원에서 세미콜론(;) 붙여 코딩하는것이 좋음
-            </li>
-            <li>대소문자를 구분합니다</li>
-            <li>가독성을 위해 들여쓰기를 사용합니다.</li>
-            <li>주석(comment) 처리 방법에는 한 줄 주석처리와 여러 줄 주석처리가 있습니다.</li>
-        </ol>
+        <nav class="menu">
+            <ul>
+                <li><a href="basic.html">기본 규칙</a></li>
+                <li><a href="command.html">기본 명령어</a></li>
+            </ul>
+        </nav>
         <article class="article">
-            <h2>mark up 기본 규칙</h2>
-            <p>마크업을 할 때 기본적으로 알고 있어야 하는 문법들</p>
+            <h2>02 기본 규칙</h2>
 
             <!-- 1번 -->
-            <h3>1. 요소는 시작 태그와 종료 태그가 있어야 합니다.</h3>
+            <h3>1. 하나의 실행문이 끝나면 마지막에 세미콜론(;)을 붙여 줍니다.</h3>
+            <p>하나의 실행문을 확인하고 넘어가는 차원에서 세미콜론을 붙여 코딩하는것이 좋습니다.</p>
             <p class="box">
-                &lt;p&gt; 요소는 시작 태그와 종료 태그가 있어야 한다&lt;/&gt;(o)<br>
-                &lt;p&gt; 요소는 시작 태그와 종료 태그가 있어야 한다. (x)
+                var num=5;<br>documnet.write(num);
             </p>
-            <p >태그 중에는 종료 태그가 없는 요소들도 있습니다. 이러한 요소를 '빈 요소(empty element)'라고 하는데,
-                자주 사용되는 빈 요소에는 &lt;br&gt;,&lt;hr&gt;,&lt;img&gt;,&lt;input&gt;,&lt;meta&gt;,&lt;link&gt;
-                등이 있습니다.
-            </p>
-
-            <!-- 2번 -->
-            <h3>2. 요소는 제대로 중첩되어야 합니다.</h3>
+            <h3>2. 대소문자를 구분합니다.</h3>
             <p class="box">
-                &lt;p&gt; 중첩된 요소가 있을 때는 &lt;strong&gt;바르게&lt;/strong&gt;표현해야한다.&lt;/p&gt;(o)<br>
-                &lt;p&gt; 중첩된 요소가 있을 때는 &lt;strong&gt;바르게&lt;/p&gt;표현해야한다.&lt;/strong&gt;(x)<br>
+                var num=5;<br>documnet.write(num);<br>document.write(Num)
             </p>
-            <p >
-                마지막에 정의한 태그를 가장 먼저 닫아야 한다는 뜻인데, 이러한 중첩 관계를 부모와 자식관계라고도 합니다.
-                여기에서는  &lt;p&gt; 태그가 부모 요소가 되고, &lt;strong&gt; 태그가 자식 요소가 됩니다.
-            </p>
-
-            <!-- 3번 -->
-            <h3>3. img 태그에는 alt 속성이 있어야 합니다.</h3>
+            <h3>3. 가독성을 위해 들여쓰기를 사용합니다.</h3>
             <p class="box">
-                &lt;img src-"images/today.gif" alt="오늘"&gt; (o)<br>
-                &lt;img src-"images/today.gif"&gt; (x)
+                var avgDistance = function(){<br>var speed = distance * time;<br>}
             </p>
-            <p >
-                마지막에 정의한 태그를 가장 먼저 닫아야 한다는 뜻인데, 이러한 중첩 관계를 부모와 자식관계라고도 합니다.
-                여기에서는  &lt;p&gt; 태그가 부모 요소가 되고, &lt;strong&gt; 태그가 자식 요소가 됩니다.
-            </p>
-
-            <!-- 4번 -->
-            <h3>4. 권장하는 사항도 있습니다.</h3>
+            <h3>4. 주석(comment)처리 방법에는 한 줄 주석처리와 여러 줄 주석처리가 있습니다.</h3>
             <p class="box">
-                &lt;p&gt;태그나 속성은 소문자로 마크업 하는 것을 권장한다.&lt;/p&gt; (권장)<br>
-                &lt;P&gt;태그나 속성은 소문자로 마크업 하는 것을 권장한다.&lt;/P&gt;<br>
-                &lt;p title="속성 값"&gt;속성의 값에는 따옴표 처리를 권장한다.&lt;/P&gt;(권장)<br>
-                &lt;p title=속성 값&gt;속성의 값에는 따옴표 처리를 권장한다.&lt;/P&gt;
+                // 한 줄 주석 처리 방법입니다.<br>/* 여러 줄 <br> 주석처리 방법입니다. */
             </p>
-            <p >
-                html5는 대소문자를 구분하지는 않지만 가급적 소문자로 통일해서 마크업하는 것과,
-                속성에 대한 값에 따옴표 처리하는 것을 권장합니다.
-            </p>
-
-            <!-- 5번 -->
-            <h3>5. 주석처리 방법</h3>
-            <p >
-                주석은 일반적으로 협업(공동작업)시 다음 작업자가 현재 작업한 내용을 쉽게 알아볼 수 있도록 도와주는 설명문이라고 보면 됩니다.
-                주석 내용은 브라우저 화면에 출력되지 않으며, 처리 방법은 다음과 같습니다.
-            </p>
-            <p class="box">
-                &lt;!-- header --&gt;<br>
-                &lt;!-- 여기서부터 공지 사항입니다. --&gt;
-            </p>
+            
         </article>
-        <!-- 310쪽 2-1번 참조 -->
     </section>
 </body>
 </html>
