--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -35,6 +35,28 @@
     <!-- //header -->
 
     <main id="main">
+        <div class="main_menu">
+            <ul><!--ul>li*17>a[href="#"]{$$} 사용함-->
+                <li><a href="#">01. 변수 : 데이터 저장</a></li>
+                <li><a href="#">02. 변수 : 데이터 저장 + 데이터 변경</a></li>
+                <li><a href="#">03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가</a></li>
+                <li><a href="#">04. 변수 : 지역변수 + 전역 변수 + 매개 변수</a></li>
+                <li><a href="#">05. 상수 : 데이터 저장 + 데이터 변경(X)</a></li>
+                <li><a href="#">06. 배열 : 데이터 저장(여러개) : 표현방법 1</a></li>
+                <li><a href="#">07. 배열 : 데이터 저장(여러개) : 표현방법 2</a></li>
+                <li><a href="#">08. 배열 : 데이터 저장(여러개) : 표현방법 3</a></li>
+                <li><a href="#">09. 배열 : 데이터 저장(여러개) : 표현방법 4</a></li>
+                <li><a href="#">10. 객체 : 데이터 저장(키와 값) : 표현방법 1</a></li>
+                <li><a href="#">11. 객체 : 데이터 저장(키와 값) : 표현방법 2</a></li>
+                <li><a href="#">12. 객체 : 데이터 저장(키와 값) : 표현방법 3</a></li>
+                <li><a href="#">13. 객체 : 데이터 저장(키와 값) : 표현방법 4</a></li>
+                <li><a href="#">14. 객체 : 데이터 저장(키와 값) : 표현방법 5</a></li>
+                <li><a href="#">15. 객체 : 데이터 저장(키와 값) : 표현방법 6</a></li>
+                <li><a href="#">16. 객체 : 데이터 저장(키와 값) : 표현방법 7</a></li>
+                <li><a href="#">17. 객체 : 데이터 저장(키와 값) : 표현방법 8</a></li>
+                <li><a href="#">18. 객체 : 데이터 저장(키와 값) : 표현방법 9</a></li>
+            </ul>
+        </div>
         <div class="main_script"></div>
         <div class="main_desc"></div>
     </main>
