--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -69,13 +69,13 @@
                 <div class="script">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
 <pre><code class="language-js">{
-    var x = 100;
-    var y = 200;
-    var z = "javascript";
+    var x = 100;            //변수 x에 숫자 100을 저장함
+    var y = 200;            //변수 y에 숫자 200을 저장함
+    var z = "javascript";           //변수 z에 문자열 "javascript" 생성함
 
-    document.write(x);
-    document.write(y);
-    document.write(z);
+    document.write(x);          //x 출력
+    document.write(y);          //y 출력
+    document.write(z);          //z 출력
 }
 </code></pre>
                 </div>
@@ -84,6 +84,46 @@
                     <details>
                         <summary>결과보기</summary>
                         <div class="sample01_result">
+                            
+                        </div>
+                    </details>
+                    <!-- 결과보기 끝 -->
+                </div>
+            </div>
+        </div>
+        <!-- 메인 샘플 끝 -->
+
+        <!-- 메인 샘플 시작 -->
+        <div class="main_sample">
+            <div id="sample02" class="sample">
+                <h3>02. 변수 : 데이터 저장</h3>
+                <p>
+                    변수는 데이터를 저장하는 저장소 입니다.
+                    이 저장소에서는 숫자, 문자, 함수, 객체 등을 저장할 수 있습니다.
+                </p>
+                <div class="script">
+            <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
+<pre><code class="language-js">{
+    let x = 100;
+    let y = 100;
+    let z = 100;
+
+    x=300; //변수 x의 값이 100에서 300으로 변경됨
+    y=400; //변수 y의 값이 100에서 300으로 변경됨
+    z="jquery" //변수 z의 값이 javascript에서 jquery로 변경됨
+
+    document.write(x);
+    document.write(y);
+    document.write(z);
+
+}
+</code></pre>
+                </div>
+                <div class="result">
+                    <!-- 결과보기 -->
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample02_result">
                             
                         </div>
                     </details>
@@ -103,6 +143,7 @@
     <script src="asset/js/highlight.min.js"></script><!-- 1. 스크립트 가져옴 (다음줄) -->
     <script>hljs.highlightAll();</script><!-- 2. 스크립트 실행 (살짝 위로) -->
     <script>
+    //01
         {
             var x = 100;
             var y = 200;
@@ -113,6 +154,22 @@
             document.write(z);
             // innerText / innerHTML 두가지가 있다.
             document.querySelector(".sample01_result").innerHTML=x+"<br>"+y+"<br>"+z
+        }
+    //02
+        {
+            let x = 100;
+            let y = 200;
+            let z = "javascript";
+
+            x=300; //변수 x의 값이 100에서 300으로 변경됨
+            y=400; //변수 y의 값이 100에서 300으로 변경됨
+            z="jquery" //변수 z의 값이 javascript에서 jquery로 변경됨
+
+            document.write(x);
+            document.write(y);
+            document.write(z);
+
+            document.querySelector(".sample02_result").innerHTML=x+"<br>"+y+"<br>"+z
         }
     </script>
 </body>
