--- a/html/block_inline.html
+++ b/html/block_inline.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML 기초</title>
+    <link rel="stylesheet" href="../javascript/asset/css/dracula.css"> <!-- 0. 드라큘라 적용 (맨 밑으로)-->
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     <style>
         *{
             margin: 0;
@@ -85,6 +87,10 @@
             font-weight: normal;
             margin-bottom: 10px;
         }
+        .article h3 {
+            font-weight: normal;
+            margin-bottom: 10px;
+        }
         .article p{
             margin-bottom: 10px;
         }
@@ -157,60 +163,71 @@
             </ul>
         </nav>
         <article class="article">
-            <h2>HTML 기본 문서</h2>
-            <p> <!-- &lt; / &gt;-->
-                html 요소는 &lt;head&gt; 요소와 &lt;body 요소&gt; 로 구성되어 있으며,<br>
-                &lt;head&gt; 요소 안에는 &lt;meta&gt;, &lt;title&gt;, &lt;link&gt;, &lt;style&gt;, &lt;script&gt; 등의 요소들이 올 수 있습니다
-            </p>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>요소명</th>
-                        <th>설명</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="center">&lt;meta&gt;</td>
-                        <td>HTML 문서의 설명, 키워드, 문서의 작성자 등을 지정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td class="center">&lt;title&gt;</td>
-                        <td>HTML 문서의 제목을 지정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td class="center">&lt;link&gt;</td>
-                        <td>외부의 CSS 파일을 HTML 문서에 연결할 때 사용합니다.</td>
-                    </tr>
-                    <tr>
-                        <td class="center">&lt;style&gt;</td>
-                        <td>HTML 문서 내에서 스타일(CSS)을 정의합니다.</td>
-                    </tr>
-                    <tr>
-                        <td class="center">&lt;script&gt;</td>
-                        <td>자바스크립트를 HTML 문서 내부에서 정의하거나 외부에서 자바스크립트 파일을 불러올 때 사용합니다.</td>
-                    </tr>
-                </tbody>
-            </table>
+            <!-- 시멘틱 마크업 -->
+            <h2>01. 블록 레벨 요소</h2>
             <p>
-                [예시 1-1]에서 &lt;html lang="ko"&gt;나 &lt;meta charset="UTF-8"&gt;처럼 태그 내부에 부가적인 설정값을 선언하는 것을 속성(attribute)이라고 합니다.
+                블록 레벨 요소는 마크업을 할 때 줄이 바뀌는 특성을 지니고 있음.
             </p>
+            <pre ><code class="language-js">{
+                &lt;!DOCTYPE html&gt;
+                &lt;html lang="ko"&gt;
+                    &lt;head&gt;
+                        &lt;meta charset="UTF-8"&gt;
+                        &lt;title&gt;블록 레벨 요소&lt;/title&gt;
+                    &lt;/head&gt;
+                    &lt;body&gt;
+                        &lt;h1&gt;블록 레벨 요소&lt;/h1&gt;
+                        &lt;h2&gt;블록 레벨 요소 성질&lt;/h1&gt;
+                        &lt;p&gt;줄 바꿈이 생깁니다.&lt;/p&gt;
+                    &lt;/body&gt;
+                &lt;/html&gt;
+            }
+            </code></pre>
+            <p>&lt;h1&gt;,&lt;h2&gt;,&lt;p&gt; 요소들은 블록의 성질을 지니고 있어 화면상 줄 바꿈 현상이 일어남</p>
+            <h2>02. 인라인 요소</h2>
             <p>
-                lang 속성은 HTML 문서에서 사용하는 언어를 말하며 lang="ko"는 한국어, lang="en" 영어를 의미
+                인라인 요소는 블록 레벨 요소와 달리 줄 바꿈 특성이 없으며 행이 바뀌지 않고 한줄 출력임.
             </p>
-            <p>
-                lang 속성 중요이유 언어 설정에 따라 시각장애인들을 위해 읽어주는 프로그램이 설정 언어에 맞게 읽어주기 때문
-            </p>
-            <p>
-                lang 속성은 HTML 문서에서 꼭 정의해야 하는 속성
-            </p>
-            <p class="box">
-                &lt;i lang="de"&gt;Ich liebe dich&lt;/i&gt;
-            </p>
-            <p>
-                HTML5의 문자 인코딩 방식으로 주로 사용
-            </p>
+            <pre ><code class="language-js">{
+                &lt;!DOCTYPE html&gt;
+                &lt;html lang="ko"&gt;
+                    &lt;head&gt;
+                        &lt;meta charset="UTF-8"&gt;
+                        &lt;title&gt;인라인 요소&lt;/title&gt;
+                    &lt;/head&gt;
+                    &lt;body&gt;
+                        &lt;strong&gt;인라인 요소&lt;/strong&gt;
+                        &lt;span&gt;인라인 요소는 한 줄로 출력됩니다.&lt;/span&gt;
+                    &lt;/body&gt;
+                &lt;/html&gt;
+            }
+            </code></pre>
+            <p>&lt;strong&gt;,&lt;span&gt; 요소들은 인라인 성질을 지니고 있어 행이 안바뀌고 한줄 출력 됨</p>
+            <!-- 시멘틱 마크업 종료 -->
+            <!-- 테이블 -->
+            <article class="article">
+                <table class="table">
+                    <thead>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>요소 유형</td>
+                            <td class="center">특징</td>
+                        </tr>
+                        <tr>
+                            <td class="center">블록 레벨<br>요소</td>
+                            <td>1. 줄바꿈 있음<br>2.텍스트와 인라인요소만 자식 요소로 포함 가능<br>3.블록레벨요소를 자식 요소로 포함할 수 있는 요소와 아닌 요소가 있다.</td>
+                        </tr>
+                        <tr>
+                            <td class="center">인라인 요소</td>
+                            <td>1. 줄바꿈이 일어나지 않음<br>2. 텍스트와 인라인 요소를 자식 요소로 포함 가능<br>3.블록레벨요소를 자식 요소로 포함 못함</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+            <!-- 테이블 끝-->
         </article>
     </section>
+    <script>hljs.highlightAll();</script>
 </body>
 </html>
