--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -30,7 +30,7 @@
             <ul class="study">
                 <li><a href="#">기본 규칙</a></li>
                 <li><a href="#">기본 명령어</a></li>
-                <li><a href="#">연산자</a></li>
+                <li><a href="counting.html">연산자</a></li>
             </ul>
         </nav>
     </header>
