--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -157,6 +157,7 @@
             <ul>
                 <li><a href="basic.html">기본 규칙</a></li>
                 <li><a href="command.html">기본 명령어</a></li>
+                <li><a href="counting.html">연산자</a></li>
             </ul>
         </nav>
         <article class="article">
