--- a/css/index.html
+++ b/css/index.html
@@ -83,8 +83,8 @@
         <nav>
             <h1>CSS <em>레퍼런스 북</em></h1> <!-- em은 강조하는 태그 -->
             <ol>
-                <li><a href="../html/index.html">기초</a></li>
-                <li><a href="../css/index.html">주제</a></li>
+                <li><a href="css_study.html">기초</a></li>
+                <li><a href="#">주제</a></li>
                 <li><a href="#">알파벳</a></li>
             </ol>
         </nav>
