--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
           <!-- box -->
           <section class="color-shape script">
-            <a href="javascript/command.html" target="_blank">
+            <a href="javascript/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">JAVASCRIPT</span>
@@ -185,7 +185,7 @@
 
           <!-- box -->
           <section class="color-shape script">
-            <a href="html/basic.html" target="_blank">
+            <a href="html/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">HTML</span>
