--- a/html/block_inline.html
+++ b/html/block_inline.html
@@ -169,19 +169,20 @@
                 블록 레벨 요소는 마크업을 할 때 줄이 바뀌는 특성을 지니고 있음.
             </p>
             <pre ><code class="language-js">{
-                &lt;!DOCTYPE html&gt;
-                &lt;html lang="ko"&gt;
-                    &lt;head&gt;
-                        &lt;meta charset="UTF-8"&gt;
-                        &lt;title&gt;블록 레벨 요소&lt;/title&gt;
-                    &lt;/head&gt;
-                    &lt;body&gt;
-                        &lt;h1&gt;블록 레벨 요소&lt;/h1&gt;
-                        &lt;h2&gt;블록 레벨 요소 성질&lt;/h1&gt;
-                        &lt;p&gt;줄 바꿈이 생깁니다.&lt;/p&gt;
-                    &lt;/body&gt;
-                &lt;/html&gt;
-            }
+    &lt;!DOCTYPE html&gt;
+    &lt;html lang="ko"&gt;
+            lt;head&gt;
+            &lt;meta charset="UTF-8"&gt;
+            &lt;title&gt;블록 레벨 요소&lt;/title&gt;
+        &lt;/head&gt;
+        
+        &lt;body&gt;
+            &lt;h1&gt;블록 레벨 요소&lt;/h1&gt;
+            &lt;h2&gt;블록 레벨 요소 성질&lt;/h1&gt;
+            &lt;p&gt;줄 바꿈이 생깁니다.&lt;/p&gt;
+        &lt;/body&gt;
+    &lt;/html&gt;
+}
             </code></pre>
             <p>&lt;h1&gt;,&lt;h2&gt;,&lt;p&gt; 요소들은 블록의 성질을 지니고 있어 화면상 줄 바꿈 현상이 일어남</p>
             <h2>02. 인라인 요소</h2>
@@ -189,18 +190,19 @@
                 인라인 요소는 블록 레벨 요소와 달리 줄 바꿈 특성이 없으며 행이 바뀌지 않고 한줄 출력임.
             </p>
             <pre ><code class="language-js">{
-                &lt;!DOCTYPE html&gt;
-                &lt;html lang="ko"&gt;
-                    &lt;head&gt;
-                        &lt;meta charset="UTF-8"&gt;
-                        &lt;title&gt;인라인 요소&lt;/title&gt;
-                    &lt;/head&gt;
-                    &lt;body&gt;
-                        &lt;strong&gt;인라인 요소&lt;/strong&gt;
-                        &lt;span&gt;인라인 요소는 한 줄로 출력됩니다.&lt;/span&gt;
-                    &lt;/body&gt;
-                &lt;/html&gt;
-            }
+    &lt;!DOCTYPE html&gt;
+    &lt;html lang="ko"&gt;
+        &lt;head&gt;
+            &lt;meta charset="UTF-8"&gt;
+            &lt;title&gt;인라인 요소&lt;/title&gt;
+        &lt;/head&gt;
+
+        &lt;body&gt;
+            &lt;strong&gt;인라인 요소&lt;/strong&gt;
+            &lt;span&gt;인라인 요소는 한 줄로 출력됩니다.&lt;/span&gt;
+        &lt;/body&gt;
+    &lt;/html&gt;
+}
             </code></pre>
             <p>&lt;strong&gt;,&lt;span&gt; 요소들은 인라인 성질을 지니고 있어 행이 안바뀌고 한줄 출력 됨</p>
             <!-- 시멘틱 마크업 종료 -->
