--- a/javascript/command.html
+++ b/javascript/command.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>기본 규칙</title>
     
-    <link rel="stylesheet" href="asset/css/dracula.css">
+    <link rel="stylesheet" href="asset/css/dracula.css"> <!-- 0. 드라큘라 적용 (맨 밑으로)-->
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     <style>
@@ -230,31 +230,32 @@
                 <div id="sample01" class="sample">
                     <h2>09. 배열 : 여러개인 데이터를 저장 : 표현 방법 4번째</h2>
                     <div class="code">
-                        <pre ><code class="language-js">{
-        &lt;!doctype html&gt;
-        &lt;html lang="ko"&gt;
+<pre><code class="language-js">{
+    &lt;!doctype html&gt;
+    &lt;html lang="ko"&gt;
         &lt;head&gt;
-            &lt;meta charset="UTF-8"&gt;
-            &lt;title&gt;기본명령어&lt;/title&gt;
+        &lt;meta charset="UTF-8"&gt;
+        &lt;title&gt;기본명령어&lt;/title&gt;
             &lt;script&gt;
                 prompt('출력 페이지 수를입력하세요!','');// ''는 작은따옴표 두 개 입니다.
                 alert('자바스크립트');
                 document.write('자바스크립트');
                 console.log('자바스크립트');
                 confirm('정말 삭제 하시겠습니까?');
-            &lt;script&gt;
+            &lt;/script&gt;
         &lt;/head&gt;
         &lt;body&gt;
         &lt;/body&gt;
-        &lt;/html&gt;
-    }
-                        </code></pre>
-                    </div>
+    &lt;/html&gt;
+}
+</code></pre>
                 </div>
             </div>
-            
-        </article>
-    </section>
-    <script>hljs.highlightAll();</script>
+        </div>
+
+    </article>
+    <script src="asset/js/highlight.min.js"></script><!-- 1. 스크립트 가져옴 (다음줄) -->
+    <script>hljs.highlightAll();</script><!-- 2. 스크립트 실행 (살짝 위로) -->
+</section>
 </body>
 </html>
