--- a/css/css_study.html
+++ b/css/css_study.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자바스크립트 : 데이터 저장하기</title>
+    <title>CSS</title>
     <link rel="stylesheet" href="asset/css/style.css">
     <link rel="stylesheet" href="asset/css/dracula.css"> <!-- 0. 드라큘라 적용 (맨 밑으로)-->
 </head>
 <body>
     <header id="header">
-        <h1>Javascript</h1>
+        <h1>CSS</h1>
         <nav class="header_nav">
             <ul>
                 <li><a href="javascript01.html">데이터 저장하기</a></li>
