--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -5,161 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자바스크립트 기본규칙</title>
-    <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
-    <style>
-        /* 리셋 */
-        *{
-            margin: 0;
-            padding: 0;
-            font-family: 'GmarketSans';
-        }
-
-        /*헤더*/
-        #header{
-            padding: 2vw;
-            border-bottom: 1px dashed #dedede;
-        }
-        #header h1{
-            margin-bottom: 2vw;
-            font-size: 4vw;
-        }
-        #header nav{}
-        #header nav ul{}
-        #header nav ul li{
-            list-style: none; /* 점 없앰 */
-            display: inline; /* 가로 정렬 */
-        }
-        #header nav ul li a{
-            text-decoration: none;
-            color: #000;
-            border: 1px solid #000;
-            padding: 0.9vw;
-            display: inline-block;
-        }
-        #header nav ul li a:hover{
-            background-color: #000;
-            color: #fff;
-            transition: 0.3s;
-        }
-
-        /*컨텐츠*/
-        #contents{
-            padding: 2vw;
-        }
-
-        #contents .menu {
-            border-bottom: 1px dashed #dedede; /*선 생성*/
-            padding-bottom: 2vw;
-        }
-        #contents .menu ul li {
-            list-style: none;
-            display: inline;
-        }
-        #contents .menu ul li a{
-            text-decoration: none;
-            border: 1px solid #000;
-            background-color: #000;
-            color: #fff;
-            padding: 1vw;
-            word-break: keep-all;
-            margin-top: 0.7vw;
-            margin-bottom: 0.7vw;
-            display: inline-block;
-        }
-        #contents .menu ul li a:hover{
-            text-decoration: none;
-            border: 1px solid #000;
-            background-color: #fff;
-            transition: 0.2s;
-            color: #000;
-            padding: 1vw;
-            word-break: keep-all;
-            margin-top: 0.7vw;
-            margin-bottom: 0.7vw;
-            display: inline-block;
-        }
-        .article {
-            padding: 2vw 0;
-            line-height: 1.6;
-        }
-        .article h2 {
-            font-weight: normal;
-            margin-bottom: 10px;
-        }
-        .article h3 {
-            font-weight: normal;
-            margin-bottom: 10px;
-        }
-        .article p{
-            margin-bottom: 10px;
-        }
-        .article .table{
-            width: 100%;
-            border-spacing: 0;
-            border-collapse: collapse; /*겹친 선 없앰 */
-            margin-bottom: 10px;
-        }
-        .article .table tr th{
-            border: 1px solid #dedede;
-            padding: 10px;
-            font-weight: normal;
-            background-color: #f5f5f5;
-        }
-        .article .table tr td{
-            border: 1px solid #dedede;
-            padding: 10px;
-        }
-        .article .table .center{
-            text-align: center;
-        }
-        .article .box{
-            background-color: #f5f5f5;
-            padding: 10px;
-        }
-        .article .box2{
-            background-color: #ffffff;
-            padding: 10px;
-        }
-        /* 미디어 쿼리 */
-        @media (max-width: 800px){
-            #header{
-                padding: 16px;
-            }
-            #header h1{
-                font-size: 40px;
-            }
-            #header nav ul li a{
-                padding: 5px 10px;
-                font-size: 18px;
-            }
-            #contents{
-                padding: 16px;
-            }
-        }/*추가*/
-    </style>
+    <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="asset/css/dracula.css"> <!-- 0. 드라큘라 적용 (맨 밑으로)-->
 </head>
 <body>
     <header id="header">
-        <h1>JavaScript</h1>
-        <nav>
+        <h1>Javascript</h1>
+        <nav class="header_nav">
             <ul>
                 <li><a href="javascript01.html">데이터 저장하기</a></li>
                 <li><a href="javascript02.html">데이터 불러오기</a></li>
                 <li><a href="javascript03.html">데이터 실행하기</a></li>
                 <li><a href="javascript04.html">데이터 제어하기</a></li>
             </ul>
-        </nav>
-    </header>
-
-    <!-- 숙제하는법 : 정리할것 -->
-    <section id="contents">
-        <nav class="menu">
             <ul>
+                <li><a href="#">문자열 객체</a></li>
+                <li><a href="#">배열 객체</a></li>
+                <li><a href="#">수학 객체</a></li>
+                <li><a href="#">숫자 객체</a></li>
+                <li><a href="#">브라우저 객체</a></li>
+                <li><a href="#">요소 객체</a></li>
+                <li><a href="#">이벤트 객체</a></li>
+            </ul>
+            <ul class="study">
                 <li><a href="basic.html">기본 규칙</a></li>
                 <li><a href="command.html">기본 명령어</a></li>
                 <li><a href="counting.html">연산자</a></li>
             </ul>
         </nav>
+    </header>
+    <!-- //header -->
+    <!-- 숙제하는법 : 정리할것 -->
+    <section id="contents">
+        
         <article class="article">
             <h2>02 기본 규칙</h2>
 
