--- a/html/block_inline.html
+++ b/html/block_inline.html
@@ -142,7 +142,7 @@
 </head>
 <body>
     <header id="header">
-        <h1><a href="index.html">HTML</a></h1>
+        <h1>HTML</h1>
         <nav>
             <ul>
                 <li><a href="#">기초</a></li>
@@ -159,7 +159,6 @@
                 <li><a href="#">W3C validator</a></li>
                 <li><a href="semantic.html">시멘틱 마크업</a></li>
                 <li><a href="block_inline.html">블록/인라인 요소</a></li>
-                <li><a href="css.html">CSS</a></li>
             </ul>
         </nav>
         <article class="article">
@@ -213,8 +212,8 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>요소 유형</td>
-                            <td class="center">특징</td>
+                            <th class="center">요소 유형</th>
+                            <th class="center">특징</th>
                         </tr>
                         <tr>
                             <td class="center">블록 레벨<br>요소</td>
