--- a/css/index.html
+++ b/css/index.html
@@ -4,89 +4,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS</title>
+    <title>자바스크립트</title>
 
-    <link href="https://webfontworld.github.io/lotte/GhanaChocolate.css" rel="stylesheet">
+    <!-- 파비콘 -->
+    <link rel="shortcut icon" href="../assets/ico/favicon2.png">
+    <link rel="apple-touch-icon-precomposed" href="../assets/ico/favicon2_114.png">
+    <link rel="icon" href="../assets/ico/icon2.png">
+    <link rel="icon" href="../assets/ico/favicon2_57.png" sizes="16x16">
+    <link rel="icon" href="../assets/ico/favicon2_72.png" sizes="32x32">
+    <link rel="icon" href="../assets/ico/favicon2_114.png" sizes="48x48">
+    <link rel="icon" href="../assets/ico/favicon2_114.png" sizes="64x64">
+    <link rel="icon" href="../assets/ico/favicon2_114.png" sizes="128x128">
 
+    <link href="https://webfontworld.github.io/kotra/KotraLeap.css" rel="stylesheet">
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
-            font-family: 'GhanaChocolate';
-            background-color: #436dde;
+            font-family: 'KotraLeap';
         }
-        main{
+        main em{
+            display: block;
+            font-size: 70px;
+        }
+        main {
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 100vh;
             flex-direction: column;
-            background-color: #fff;
-            border: 8px solid #436dde;
-            border-radius: 50px;
+            height: 100vh;
+            text-align: center;
+            padding: 2vw;
+            border: 8px solid #063f2c;
             box-sizing: border-box;
         }
-        main h1{
-            font-size: 20vw;
-            background-color: transparent;
-            text-align: center;
-            color:#436dde;
-            line-height: 1.0;
-            margin-bottom: 10vw;
-        }
-        #main h1 em{
-            background-color: transparent;
+        h1 {
             font-size: 8vw;
-            display:block ;
-            font-style: normal;
+            color: #063f2c;
+            margin-bottom: 2vw;
         }
-        #main{}
-        #main nav{
-            background-color: transparent;
+        nav ul li{
+            display: inline;
+            list-style: none;
 
         }
-        #main nav{
-            background-color: transparent;
-
-        }
-        #main nav ol{
-            background-color: transparent;
-
-        }
-        #main nav ol li{
-            background-color: transparent;
-
-            list-style: none; /* 점 없앰 */
-            display: inline; /* 가로로 눕힘 */
-            padding: 5px;
-        }
-        #main nav ol li a{
-            background-color: transparent;
-
+        nav ul li a{
             text-decoration: none;
-            color: #436dde;
-            border: 1px solid #436dde;
+            border: 1px solid #dcdcdc;
+            padding: 1.2vw 3vw;
+            display: inline-block;
+            margin: 0.5vw;
             border-radius: 50px;
-            font-size: 18px;
-            padding: 2vw;
+            /* 원래는 18px */
+            font-size: 1.5vw; 
+            transition: all 0.3s;
         }
-        #main nav ol li a:hover{
-            background-color: #436dde;
-            color: #fff;
-            
-            transition: 0.3s;
+        nav ul li a:hover {
+            background-color: #063f2c;
+            color: #ffffff;
         }
     </style>
 </head>
 <body>
-    <main id="main">
+    <main>
+        <h1>CSS<em>레퍼런스북</em></h1>
         <nav>
-            <h1>CSS <em>레퍼런스 북</em></h1> <!-- em은 강조하는 태그 -->
-            <ol>
+            <ul>
                 <li><a href="css_study.html">기초</a></li>
                 <li><a href="#">주제</a></li>
                 <li><a href="#">알파벳</a></li>
-            </ol>
+            
+            </ul>
         </nav>
     </main>
 </body>
