--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -37,13 +37,10 @@
     <!-- //header -->
     <!-- 숙제하는법 : 정리할것 -->
     <section id="contents">
-        
+        <h2>자바스크립트 기본 규칙</h2>
         <article class="article">
-            <h2>02 기본 규칙</h2>
-
             <!-- 1번 -->
-            <h3>1. 하나의 실행문이 끝나면 마지막에 세미콜론(;)을 붙여 줍니다.</h3>
-            <p>하나의 실행문을 확인하고 넘어가는 차원에서 세미콜론을 붙여 코딩하는것이 좋습니다.</p>
+            <h3>1. 하나의 실행문이 끝나면 마지막에 세미콜론(;)을 붙여 줍니다.<br>하나의 실행문을 확인하고 넘어가는 차원에서 세미콜론을 붙여 코딩하는것이 좋습니다.</h3>
             <p class="box">
                 var num=5;<br>documnet.write(num);
             </p>
