--- a/javascript/index.html
+++ b/javascript/index.html
@@ -51,7 +51,8 @@
             display: inline-block;
             margin: 0.5vw;
             border-radius: 50px;
-            font-size: 18px;
+            /* 원래는 18px */
+            font-size: 1.5vw; 
             transition: all 0.3s;
         }
         nav ul li a:hover {
