--- a/css/index.html
+++ b/css/index.html
@@ -56,7 +56,7 @@
             margin: 0.5vw;
             border-radius: 50px;
             /* 원래는 18px */
-            font-size: 1.5vw; 
+            font-size: 18px;
             transition: all 0.3s;
         }
         nav ul li a:hover {
