--- a/javascript/command.html
+++ b/javascript/command.html
@@ -36,8 +36,9 @@
     </header>
     <!-- //header -->
     <section id="contents">
+        <h2>자바스크립트 기본 명령어</h2>
         <article class="article">
-            <h2>05 기본 명령어</h2>
+            <h2>기본 명령어</h2>
             <table class="table">
                 <thead>
                     <tr>
@@ -66,7 +67,7 @@
             </table>
             <div class="script">
                 <div id="sample01" class="sample">
-                    <h2>09. 배열 : 여러개인 데이터를 저장 : 표현 방법 4번째</h2>
+                    <h2>배열 : 여러개인 데이터를 저장 : 표현 방법 4번째</h2>
                     <div class="code">
 <pre><code class="language-js">{
     &lt;!doctype html&gt;
