--- a/javascript/counting.html
+++ b/javascript/counting.html
@@ -38,7 +38,7 @@
     <section id="contents">
         <h2>자바스크립트 연산자</h2><!-- 01 산술연산자 -->
         <article class="article"><!-- 테이블 -->
-            <h2>01. 산술 연산자</h2><!-- 01 산술연산자 -->
+            <h2>산술 연산자</h2><!-- 01 산술연산자 -->
             <p>산술 연산자의 종류</p>
             <table class="table">
                 <thead>
@@ -87,7 +87,7 @@
         <!-- 테이블 -->
         <article class="article">
             <!-- 02 대입연산자 -->
-            <h2>02. 대입 연산자</h2>
+            <h2>대입 연산자</h2>
             <p>산술 연산자의 종류</p>
             <table class="table">
                 <thead>
@@ -130,7 +130,7 @@
         <!-- 테이블 -->
         <article class="article">
             <!-- 03 비교연산자 -->
-            <h2>03. 비교 연산자</h2>
+            <h2>비교 연산자</h2>
             <p>산술 연산자의 종류</p>
             <table class="table">
                 <thead>
@@ -182,7 +182,7 @@
         <!-- 테이블 -->
         <article class="article">
             <!-- 04 논리 연산자 -->
-            <h2>04 논리 연산자</h2>
+            <h2>논리 연산자</h2>
             <p>논리 연산자의 종류</p>
             <table class="table">
                 <thead>
