--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <a class="brand" href="index.html">web's</a>
         <div class="nav-collapse collapse pull-right">
           <ul class="nav">
-            <li><a href="https://wiss.tistory.com/">Blog</a></li>
-            <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
-            <li><a href="https://github.com/webstoryboy/dothome1">Github</a></li>
+            <li><a href="https://esol-studio.tistory.com">Blog</a></li>
+            <li><a href="https://codepen.io/kimsangjunv1">Codepen</a></li>
+            <li><a href="https://github.com/kimsangjunv1">Github</a></li>
           </ul>
         </div>
       </div>
@@ -101,7 +101,7 @@
                     aria-hidden="true"></i><span>twitter</span></a></li>
               <li><a href="https://codepen.io/webstoryboy/" target="_blank"><i class="fa fa-codepen"
                     aria-hidden="true"></i><span>codepen</span></a></li>
-              <li><a href="https://github.com/webstoryboy" target="_blank"><i class="fa fa-github"
+              <li><a href="https://github.com/kimsangjunv1" target="_blank"><i class="fa fa-github"
                     aria-hidden="true"></i><span>github</span></a></li>
               <li><a href="https://www.youtube.com/channel/UCsvQSv7EeCMHyYb9ENKAJZw" target="_blank"><i
                     class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li>
@@ -219,6 +219,27 @@
                   <h5>CSS</h5>
                   <p>CSS</p>
                   <span>CSS</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape script">
+            <a href="layout/index.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">LAYOUT</span>
+                  <span class="overlay-text-thumb-donut">LAYOUT</span>
+                  <span class="overlay-text-thumb1-donut">LAYOUT</span>
+                  <span class="overlay-text-thumb2-donut">LAYOUT</span>
+                </div>
+                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>LAYOUT</h5>
+                  <p>LAYOUT</p>
+                  <span>LAYOUT</span>
                 </div>
               </div>
             </a>
