--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -10,27 +10,26 @@
 </head>
 <body>
     <header id="header">
-        <h1>Javascript</h1>
+        <h1><a href="index.html">Javascript</a></h1>
         <nav class="header_nav">
             <ul>
-                <li><a href="javascript01.html">데이터 저장하기</a></li>
+                <li class="active"><a href="javascript01.html">데이터 저장하기</a></li>
                 <li><a href="javascript02.html">데이터 불러오기</a></li>
                 <li><a href="javascript03.html">데이터 실행하기</a></li>
                 <li><a href="javascript04.html">데이터 제어하기</a></li>
             </ul>
             <ul>
-                <li><a href="#">문자열 객체</a></li>
-                <li><a href="#">배열 객체</a></li>
-                <li><a href="#">수학 객체</a></li>
-                <li><a href="#">숫자 객체</a></li>
-                <li><a href="#">브라우저 객체</a></li>
-                <li><a href="#">요소 객체</a></li>
-                <li><a href="#">이벤트 객체</a></li>
+                <li><a href="javascript05.html">문자열 객체</a></li>
+                <li><a href="javascript06.html">배열 객체</a></li>
+                <li><a href="javascript07.html">수학 객체</a></li>
+                <li><a href="javascript08.html">숫자 객체</a></li>
+                <li><a href="javascript09.html">브라우저 객체</a></li>
+                <li><a href="javascript10.html">요소 객체</a></li>
+                <li><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="study">
-                <li><a href="basic.html">기본 규칙</a></li>
-                <li><a href="command.html">기본 명령어</a></li>
-                <li><a href="counting.html">연산자</a></li>
+                <li><a href="study/basic.html">기본 규칙</a></li>
+                <li><a href="study/operator.html">연산자</a></li>
             </ul>
         </nav>
     </header>
@@ -596,6 +595,101 @@
             </div>
         </div>
         <!-- 15번 메인 샘플 끝 -->
+
+        <!-- 16번 메인 샘플 시작 -->
+        <div class="main_sample">
+            <div id="sample16" class="sample">
+                <h3>16. 객체 : 데이터 저장(키와 값) : 표현방법 6</h3>
+                <p>
+                    객체 속의 변수 생성 가능
+                </p>
+                <div class="script">
+            <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
+<pre><code class="language-js">{
+    const a = 100;
+    const b = 200;
+    const c = "javascript"
+    const obj = {a, b, c}
+
+    document.write(obj.a); //객체 안 키 a의 값 100 출력
+    document.write(obj.b); //객체 안 키 b의 값
+    document.write(obj.c); //객체 안 키 c의 값
+}
+</code></pre>
+                </div>
+                <div class="result">
+                    <!-- 결과보기 -->
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample16_result">
+                        </div>
+                    </details>
+                    <!-- 결과보기 끝 -->
+                </div>
+            </div>
+        </div>
+        <!-- 16번 메인 샘플 끝 -->
+
+        <!-- 17번 메인 샘플 시작 -->
+        <div class="main_sample">
+            <div id="sample17" class="sample">
+                <h3>17. 객체 : 데이터 저장(키와 값) : 표현방법 6</h3>
+                <p>
+                    객체는 키와 값으로 구성된 데이터 값을 저장합니다.
+                </p>
+                <div class="script">
+            <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
+<pre><code class="language-js">{
+    const obj = {
+        a : 100,
+        b : [200, 300],
+        c : {x:400, y:500},
+        d : "javascript",
+        e : function(){
+            document.write("자바스크립트가 실행되었습니다.");
+        },
+        f: function(){
+            document.write(obj.d+"가 실행되었습니다."); //객체 d키의 값 javascript + "가 실행되었습니다" 대입
+        },
+        g : function(){
+            document.write(this.d+"가 실행되었습니다."); //this로 객체 d키의 값 javascript + "가 실행되었습니다" 대입
+        }
+    }
+
+    document.write(obj.a); //객체 키 a의 값 100을 가져옴
+    document.write(obj.b[0]); //객체 키 b의 배열 첫번째인 200을 가져옴
+    document.write(obj.b[1]); //객체 키 b의 배열 두번째인 300을 가져옴
+    document.write(obj.b); //객체 키 b의 배열 값들인 200, 300을 가져옴
+    document.write(obj.c.x); //객체 키 c 속 x키의 400을 가져옴
+    document.write(obj.c.y); //객체 키 c 속 y키의 400을 가져옴
+    document.write(obj.c); //객체 안에 있는걸 설명해달라는 오류가 나옴
+    document.write(obj.d); //객체 키 d의 값인 javascript가 나옴
+    obj.e();//이거 자체가 실행문인데 document.write 라는 실행문 안에 쓰는것 맞지 않다.
+    obj.f();
+}
+</code></pre>
+                </div>
+                <div class="result">
+                    <!-- 결과보기 -->
+                    <details>
+                        <summary>결과보기</summary>
+                        <div>
+                            100<br>
+                            200<br>
+                            300<br>
+                            200 300<br>
+                            400<br>
+                            object Object<br>
+                            javascript<br>
+                            자바스크립트가 실행되었습니다<br>
+                            javascript가 실행되었습니다<br>
+                        </div>
+                    </details>
+                    <!-- 결과보기 끝 -->
+                </div>
+            </div>
+        </div>
+        <!-- 17번 메인 샘플 끝 -->
         
 
     </main>
@@ -791,7 +885,7 @@
         }
         //13
         {
-            const obj = {a:100, b:200, c:"javascript"}
+            const obj = {a:100, b:200, c:"javascript"}      //객체 a키의 값 100, b키의 값 200, c키의 값 javascript 생성
 
             //document.write(obj.a, "<br>");       //객체 첫번째 자리의 a키의 값 100을 출력
             //document.write(obj.b, "<br>");       //객체 두번째 자리의 b키의 값 200을 출력
@@ -812,13 +906,13 @@
             document.querySelector(".sample14_result").innerHTML=obj[0].a+"<br>"+obj[0].b+"<br>"+obj[1].c
 
         }
-        //15 객체 : 객체 속에 뱌열
+        //15 객체 : 객체 속에 배열
         {
             const obj = {
-                a: 100,
-                b: [200, 300],
-                c: {x: 400, y: 500},
-                d: "javascript"
+                a: 100,     //배열 안의 개체 키 a에 100 대입
+                b: [200, 300],      //배열 안의 개체 키 b의 배열에 200,300 대입
+                c: {x: 400, y: 500},        //객체 키 c의 객체 x의 값 400 출력
+                d: "javascript"     //객체 d의 값 javascript 출력
             }
             //document.write(obj.a, "<br>");       //객체 안의 a키의 값 100 출력
             //document.write(obj.b[0], "<br>");       //객체안의 b키의 배열에서 첫번째 값 200 출력
@@ -828,6 +922,57 @@
             //document.write(obj.d, "<br>");       //객체안의 d키의 값 javascript 출력
 
             document.querySelector(".sample15_result").innerHTML=obj.a+"<br>"+obj.b[0]+"<br>"+obj.b[1]+"<br>"+obj.c.x+"<br>"+obj.c.y+"<br>"+obj.d
+
+        }
+
+        //16 객체 : 객체 속에 변수
+        {
+            const a = 100;
+            const b = 200;
+            const c = "javascript"
+
+            const obj = {a, b, c};
+
+            //document.write(obj.a); //객체 안 키 a의 값 100 출력
+            //document.write(obj.b); //객체 안 키 b의 값
+            //document.write(obj.c); //객체 안 키 c의 값
+
+            document.querySelector(".sample16_result").innerHTML=obj.a+"<br>"+obj.b+"<br>"+obj.c;
+
+        }
+
+        //17 객체 : 객체 속의 함수
+        {
+            const obj = {
+                a : 100,
+                b : [200, 300],
+                c : {x:400, y:500},
+                d : "javascript",
+                e : function(){
+                    document.write("자바스크립트가 실행되었습니다.");
+                },
+
+                f: function(){
+                    document.write(obj.d+"가 실행되었습니다."); //객체 d키의 값 javascript + "가 실행되었습니다" 대입
+                },
+
+                g : function(){
+                    document.write(this.d+"가 실행되었습니다."); //this로 객체 d키의 값 javascript + "가 실행되었습니다" 대입
+                } 
+            }
+            //document.write(obj.a); //객체 키 a의 값 100을 가져옴
+            //document.write(obj.b[0]); //객체 키 b의 배열 첫번째인 200을 가져옴
+            //document.write(obj.b[1]); //객체 키 b의 배열 두번째인 300을 가져옴
+            //document.write(obj.b); //객체 키 b의 배열 값들인 200, 300을 가져옴
+            //document.write(obj.c.x); //객체 키 c 속 x키의 400을 가져옴
+            //document.write(obj.c.y); //객체 키 c 속 y키의 400을 가져옴
+            //document.write(obj.c); //객체 안에 있는걸 설명해달라는 오류가 나옴
+            //document.write(obj.d); //객체 키 d의 값인 javascript가 나옴
+            //obj.e();//이거 자체가 실행문인데 document.write 라는 실행문 안에 쓰는것 맞지 않다.
+            //obj.f();
+
+            document.querySelector(".sample17_result").innerHTML=obj.a+"<br>"+obj.b[0]+"<br>"+obj.b[1]+"<br>"+
+                                                                obj.c.x+"<br>"+obj.c.y+"<br>"+obj.d
 
         }
     </script>
