--- a/javascript/javascript07.html
+++ b/javascript/javascript07.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자바스크립트 : 데이터 제어하기</title>
+    <title>자바스크립트 : 수학 객체</title>
     <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="asset/css/dracula.css">
 </head>
 <body>
     <header id="header">
@@ -15,12 +16,12 @@
                 <li><a href="javascript01.html">데이터 저장하기</a></li>
                 <li><a href="javascript02.html">데이터 불러오기</a></li>
                 <li><a href="javascript03.html">데이터 실행하기</a></li>
-                <li class="active"><a href="javascript04.html">데이터 제어하기</a></li>
+                <li><a href="javascript04.html">데이터 제어하기</a></li>
             </ul>
             <ul>
                 <li><a href="javascript05.html">문자열 객체</a></li>
                 <li><a href="javascript06.html">배열 객체</a></li>
-                <li><a href="javascript07.html">수학 객체</a></li>
+                <li class="active"><a href="javascript07.html">수학 객체</a></li>
                 <li><a href="javascript08.html">숫자 객체</a></li>
                 <li><a href="javascript09.html">브라우저 객체</a></li>
                 <li><a href="javascript10.html">요소 객체</a></li>
@@ -33,33 +34,17 @@
         </nav>
     </header>
     <!-- //header -->
-
     <main id="main">
-        <div class="main_menu">
-            <ul>
-                <li><a href="#sample01">01. if문</a></li>
-                <li><a href="#sample02">02. if문 생략</a></li>
-                <li><a href="#sample03">03. 다중 if문</a></li>
-                <li><a href="#sample04">04. 중첩 if문</a></li>
-                <li><a href="#sample05">05. 삼항 연산자</a></li>
-                <li><a href="#sample06">06. switch문</a></li>
-                <li><a href="#sample07">07. while문</a></li>
-                <li><a href="#sample08">08. do while문</a></li>
-                <li><a href="#sample09">09. for문</a></li>
-                <li><a href="#sample10">10. 중첩 for문</a></li>
-                <li><a href="#sample11">11. break문</a></li>
-                <li><a href="#sample12">12. continue문</a></li>
-            </ul>
-        </div>
-        <div class="main_script"></div>
-        <div class="main_desc"></div>
+        
     </main>
     <!-- //main -->
-    
     <footer id="footer">
-        <a href="mailto:to_before@naver.com">to_before@naver.com</a>
+        <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
     </footer>
     <!-- //footer -->
-
+    <script src="asset/js/highlight.min.js"></script>
+    <script>
+        hljs.highlightAll();
+    </script>
 </body>
 </html>
