--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -239,14 +239,14 @@
 <pre><code class="language-js">{
     const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];       //arr 배열 100~900까지 순서대로 대입
 
-    document.write(arr[0], "<br>");       //arr 배열 100 출력
-    document.write(arr[1], "<br>");       //arr 배열 200 출력
-    document.write(arr[2], "<br>");       //arr 배열 300 출력
-    document.write(arr[3], "<br>");       //arr 배열 400 출력
-    document.write(arr[4], "<br>");       //arr 배열 500 출력
-    document.write(arr[5], "<br>");       //arr 배열 600 출력
-    document.write(arr[6], "<br>");       //arr 배열 700 출력
-    document.write(arr[7], "<br>");       //arr 배열 800 출력
+    document.write(arr[0]);       //arr 배열 100 출력
+    document.write(arr[1]);       //arr 배열 200 출력
+    document.write(arr[2]);       //arr 배열 300 출력
+    document.write(arr[3]);       //arr 배열 400 출력
+    document.write(arr[4]);       //arr 배열 500 출력
+    document.write(arr[5]);       //arr 배열 600 출력
+    document.write(arr[6]);       //arr 배열 700 출력
+    document.write(arr[7]);       //arr 배열 800 출력
     document.write(arr[8]);       //arr 배열 800 출력
 
     for(초기값, 조건식, 증감식)
@@ -269,7 +269,7 @@
                             600<br>
                             700<br>
                             800<br>
-                            900<br>
+                            900
                         </div>
                     </details>
                     <!-- 결과보기 끝 -->
