--- a/html/semantic.html
+++ b/html/semantic.html
@@ -21,8 +21,8 @@
             border-bottom: 1px dashed #dedede;
         }
         #header h1{
-            margin-bottom: 3vw;
             font-size: 4vw;
+            margin-bottom: 2vw;
         }
         #header nav{}
         #header nav ul{}
@@ -34,7 +34,7 @@
             text-decoration: none;
             color: #000;
             border: 1px solid #000;
-            padding: 0.9vw;
+            padding: 0.6vw 1vw 0.6vw 1vw;
             display: inline-block;
         }
         #header nav ul li a:hover{
@@ -61,19 +61,7 @@
             border: 1px solid #000;
             background-color: #000;
             color: #fff;
-            padding: 1vw;
-            word-break: keep-all;
-            margin-top: 0.7vw;
-            margin-bottom: 0.7vw;
-            display: inline-block;
-        }
-        #contents .menu ul li a:hover{
-            text-decoration: none;
-            border: 1px solid #000;
-            background-color: #fff;
-            transition: 0.2s;
-            color: #000;
-            padding: 1vw;
+            padding: 0.6vw 1vw 0.6vw 1vw;
             word-break: keep-all;
             margin-top: 0.7vw;
             margin-bottom: 0.7vw;
