--- a/test.html
+++ b/test.html
@@ -8,12 +8,9 @@
 </head>
 <body>
     <script>
-        const arr = [100, 200, 300, 400, 500];
-
-//forEach문
-arr.forEach(function(el){ //불러오는 대상, (함수(요소)){}
-    document.write(el);
-});
+        for( let i = 2; i<=100; i+=2){
+document.write(i)
+}    
     </script>
 </body>
 </html>
